--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,17 +7,14 @@
       <div>
         <h1> Dea's blog </h1>
       </div>
-      <div>
-        <p>published: Sa. 28.11.2015, 15:11</p>
-        <h2>Dea's Post # 1</h2>
-        <p>Test Post # 1, Infos Infos Infos</p>
-      </div>
-      
-      <div>
-        <p> published: Sa. 28.11.2015, 15:13</p>
-        <h2>Is this still working? Post # 2</h2>
-        <p>Test Post # 2, Doot Doot</p>
-      </div>
+
+      {% for post in posts %}
+          <div>
+              <p>published: {{ post.published_date }}</p>
+              <h1><a href="">{{ post.title }}</a></h1>
+              <p>{{ post.text|linebreaks }}</p>
+          </div>
+      {% endfor %}
     </body>
 
 </html>
